--- a/frontend/assets/global.css
+++ b/frontend/assets/global.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
@@ -21,7 +23,7 @@ html {
 
 body {
   margin: 0;
-  padding: 1em;
+  padding: 0;
 }
 
 main {
@@ -94,7 +96,7 @@ ul.information  {
 .change label {
   display: block;
   text-align: left;
-  margin-right: 10px;
+  margin-right: 0;
   padding-bottom: 0.5em;
 }
 .change button {
